# vicare-flite

./: ANNOUNCE  Makefile.am  README  configure.ac
doc/: Makefile.am  vicare-flite.texi
lib/: Makefile.am  compile-all.sps  compile-nausicaa.sps  dependencies.make  features.c  libraries.scm
lib/nausicaa/speech-tools/: flite.vicare.sls
lib/vicare/speech-tools/: flite.sls  flite.vicare.sls
lib/vicare/speech-tools/flite/: cond-expand.sls  cond-expand.vicare.sls  constants.sls.in  constants.vicare.sls.in  unsafe-capi.sls  unsafe-capi.vicare.sls
src/: Makefile.am  vicare-flite-core.c  vicare-flite-imported.c  vicare-flite-internals.h  vicare-flite-version.c
tests/: Makefile.am  demo-for-documentation.sps  demo-for-nau-documentation.sps  demo-for-nausicaa-documentation.sps  test-nausicaa-flite.sps  test-vicare-flite.sps  test-vicare-template.sps
